--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -9,21 +9,17 @@ on:
       - main
 
 jobs:
-  flutter_build:
+  # Android Build Job
+  android_build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        platform: [android, web, linux]
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.4'  # Passe dies an deine Version an
+          flutter-version: '3.24.4'
 
       - name: Install dependencies
         run: flutter pub get
@@ -31,38 +27,64 @@ jobs:
       - name: Run tests
         run: flutter test
 
-      # Android Build
       - name: Build Android APK
-        if: matrix.platform == 'android'
         run: flutter build apk --release
 
-      # Web Build
-      - name: Build Web App
-        if: matrix.platform == 'web'
-        run: flutter build web
-
-      # Linux Build
-      - name: Build Linux Application
-        if: matrix.platform == 'linux'
-        run: flutter build linux
-
-      # Optional: Artifacts hochladen
       - name: Upload Android APK
-        if: matrix.platform == 'android' && success()
         uses: actions/upload-artifact@v3
         with:
           name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
 
+  # Web Build Job
+  web_build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.4'
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Run tests
+        run: flutter test
+
+      - name: Build Web App
+        run: flutter build web
+
       - name: Upload Web Build
-        if: matrix.platform == 'web' && success()
         uses: actions/upload-artifact@v3
         with:
           name: web-build
           path: build/web
 
+  # Linux Build Job
+  linux_build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.4'
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Run tests
+        run: flutter test
+
+      - name: Build Linux Application
+        run: flutter build linux -v
+
       - name: Upload Linux Build
-        if: matrix.platform == 'linux' && success()
         uses: actions/upload-artifact@v3
         with:
           name: linux-build
