--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           flutter-version: '3.24.4'
 
+      - name: Set Up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+
       - name: Install dependencies
         run: flutter pub get
 
@@ -63,7 +68,6 @@ jobs:
           name: web-build
           path: build/web
 
-  # Linux Build Job
   linux_build:
     runs-on: ubuntu-latest
     steps:
@@ -78,6 +82,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Install Linux Build Tools
+        run: sudo apt-get install -y ninja-build cmake
+
       - name: Run tests
         run: flutter test
 
@@ -89,3 +96,4 @@ jobs:
         with:
           name: linux-build
           path: build/linux
+  
