connected go to aws s3, post and get are working

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,33 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+# Environment
+.env
+
+# Go build artifacts
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+
+# Dependency directory
+/vendor/
+go.sum
+
+# IDEs
+.vscode/
+.idea/
+
+# macOS
+.DS_Store
+
+# Logs
+*.log
+*.lock
+
+# Docker
+docker-compose.override.yml
+*.env
